--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,5 +1,3 @@
-permissions:
-  contents: write
 name: Deploy Unificado
 run-name: Deploy ${{ github.ref_name }}
 
@@ -7,10 +5,14 @@ on:
   push:
     branches: [main, dev]
 
+permissions:
+  contents: write
+
 env:
   TARGET_PORT: ${{ github.ref_name == 'main' && '12345' || '23456' }}
   SERVICE_NAME: ${{ github.ref_name == 'main' && 'DataHub-EqtOne' || 'DataHub-EqtOne-Dev' }}
   BASE_PATH: "C:\\EQTONE\\pmo_hub\\pmo_hub_${{ github.ref_name }}"
+  MAIN_PATH: "C:\\EQTONE\\pmo_hub\\pmo_hub_main"
 
 jobs:
   setup_and_stop:
@@ -49,26 +51,13 @@ jobs:
         run: |
           import re
           import os
-
-          # Caminho para o arquivo de versão
           init_path = os.path.join("pmo_hub", "pmo", "__init__.py")
-          
-          if not os.path.exists(init_path):
-              raise Exception(f"Arquivo {init_path} não encontrado!")
-
           with open(init_path, "r", encoding="utf-8") as f:
               content = f.read()
-
-          # Captura a versão atual
           version_match = re.search(r'__version__\s*=\s*"(.*?)"', content)
-          if not version_match:
-              raise Exception("Tag __version__ não encontrada no arquivo!")
-          
           current_version = version_match.group(1)
           major, minor, patch = map(int, current_version.split('.'))
           branch = "${{ github.ref_name }}"
-
-          # LÓGICA SEMVER + GIT FLOW
           if branch == "main":
               if "# major" in content.lower():
                   major += 1
@@ -78,22 +67,14 @@ jobs:
                   minor += 1
                   patch = 0
               else:
-                  # Merges na main sem comentário são tratados como Hotfix (Patch)
                   patch += 1
           else:
-              # Branch dev sempre incrementa Patch (Desenvolvimento contínuo)
               patch += 1
-
           new_version = f"{major}.{minor}.{patch}"
-
-          # Substitui a versão e remove os comentários de gatilho para limpar o arquivo
           new_content = re.sub(r'__version__\s*=\s*".*?"', f'__version__ = "{new_version}"', content)
           new_content = re.sub(r'#\s*(major|minor)', '', new_content, flags=re.IGNORECASE).strip() + "\n"
-          
           with open(init_path, "w", encoding="utf-8") as f:
               f.write(new_content)
-          
-          print(f"Versão atualizada na branch {branch}: {current_version} -> {new_version}")
 
       - name: Persistir Versão no Repositório
         shell: cmd
@@ -107,21 +88,29 @@ jobs:
           git add pmo_hub/pmo/__init__.py
           git commit -m "chore: bump version [skip ci]"
           git push https://x-access-token:%GH_TOKEN%@github.com/${{ github.repository }}.git ${{ github.ref_name }}
-  backup:
-    name: 3. Backup do Banco
+
+  database_sync:
+    name: 3. Sincronizar Banco de Dados
     needs: [setup_and_stop, update_code_and_version]
     runs-on: self-hosted
     steps:
-      - shell: cmd
+      - name: Sync Main to Dev ou Backup Main
+        shell: cmd
         working-directory: ${{ env.BASE_PATH }}
         run: |
-          if not exist "..\backups" mkdir "..\backups"
-          copy pmo_hub\db.sqlite3 ..\backups\db_${{ github.ref_name }}_${{ needs.setup_and_stop.outputs.backup_date }}.sqlite3
-          uv run python .\pmo_hub\manage.py dumpdata --natural-foreign --natural-primary -e contenttypes -e auth.Permission --indent 2 > ..\backups\dump_${{ github.ref_name }}_${{ needs.setup_and_stop.outputs.backup_date }}.json
+          if "${{ github.ref_name }}" == "dev" (
+              echo Sincronizando banco da MAIN para DEV...
+              copy /Y "${{ env.MAIN_PATH }}\pmo_hub\db.sqlite3" "pmo_hub\db.sqlite3"
+          ) else (
+              echo Realizando backup de PRODUCAO (MAIN)...
+              if not exist "..\backups" mkdir "..\backups"
+              copy /Y pmo_hub\db.sqlite3 ..\backups\db_main_${{ needs.setup_and_stop.outputs.backup_date }}.sqlite3
+              uv run python .\pmo_hub\manage.py dumpdata --natural-foreign --natural-primary -e contenttypes -e auth.Permission --indent 2 > ..\backups\dump_main_${{ needs.setup_and_stop.outputs.backup_date }}.json
+          )
 
   migrations:
     name: 4. Migrations
-    needs: backup
+    needs: database_sync
     runs-on: self-hosted
     steps:
       - shell: cmd
