Foi adicionado ícone de adicionar pendência na view de tarefas e removido adição de pendencia da demanda caso já exista

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,6 +47,9 @@ jobs:
 
       - name: Incrementar Versão Semântica (Git Flow)
         shell: python
+        env:
+          PYTHONIOENCODING: utf-8
+          LANG: C.UTF-8
         working-directory: ${{ env.BASE_PATH }}
         run: |
           import re
