Adicionado responsaveis de tarefa em demanda admin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,9 @@ dependencies = [
     "django-stubs>=5.2.8",
     "whitenoise>=6.11.0",
 ]
+
+[dependency-groups]
+dev = [
+    "django-extensions>=4.1",
+]
+
